# cargo-safe-publish

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
src/: main.rs
