[package]
name = "cargo-safe-publish"
version = "0.1.13"
edition = "2024"
license = "GPL-2.0-or-later"
include = ["Cargo.toml", "Cargo.lock", "src/**.rs", "gpl-2.0.txt", "README.md"]
description = "A safer version of `cargo publish`"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "cli"]
repository = "https://github.com/weiznich/cargo-safe-publish"

[dependencies]
cargo_metadata = "0.21"
cargo_toml = "0.22.1"
ureq = "3.0"
tar = "0.4.44"
similar-asserts = "1.7"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
gix = { version = "0.73", default-features = false, features = ["status"] }
colored = "3.0"
toml = "0.9"
serde_derive = "1"
serde = "1"
ignore = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
